--- a/index.css
+++ b/index.css
@@ -85,3 +85,47 @@ footer {
     text-align: center;
     padding: 20px 0;
 }
+
+.mvv-container {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-top: 40px;
+    flex-wrap: wrap;
+}
+
+.mvv-box {
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 20px;
+    flex: 1;
+    min-width: 250px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    text-align: center;
+}
+
+.mvv-box h3 {
+    color: rgba(0, 152, 206, 1);
+    margin-bottom: 10px;
+    font-size: 1.2em;
+}
+
+.mvv-box p {
+    color: #333;
+    font-size: 1em;
+}
+
+.icone {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 32px;
+  height: 32px;
+  background-image: url('icone.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 9999; /* fica acima de tudo */
+}
