--- a/index.css
+++ b/index.css
@@ -117,8 +117,8 @@ footer {
 }
 
 .icone {
-  position: absolute;
-  right: 0;
+  position: fixed;
+  right: 10px;
   top: 50%;
   transform: translateY(-50%);
   width: 32px;
@@ -127,5 +127,5 @@ footer {
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  z-index: 9999; /* fica acima de tudo */
+  z-index: 9999;
 }
